27_https_ingress_cert_manager copy/hello-world-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    # cert-manager.io/cluster-issuer: "letsencrypt"
    cert-manager.io/issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    # - frontend.20.73.235.13.nip.io
    - aks-app-01.westeurope.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: aks-app-01.westeurope.cloudapp.azure.com
  # - host: frontend.20.73.235.13.nip.io
    http:
      paths:
      - path: /hello-world-one(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: aks-helloworld-one
            port:
              number: 80
      - path: /hello-world-two(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: aks-helloworld-two
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: aks-helloworld-one
            port:
              number: 80
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: hello-world-ingress-static
#   annotations:
#     nginx.ingress.kubernetes.io/ssl-redirect: "false"
#     nginx.ingress.kubernetes.io/rewrite-target: /static/$2
# spec:
#   ingressClassName: nginx
#   tls:
#   - hosts:
#     - aks-app-01.westeurope.cloudapp.azure.com
#     secretName: tls-secret
#   rules:
#   - host: aks-app-01.westeurope.cloudapp.azure.com # hello-world-ingress.MY_CUSTOM_DOMAIN
#     http:
#       paths:
#       - path: /static(/|$)(.*)
#         pathType: Prefix
#         backend:
#           service:
#             name: aks-helloworld-one
#             port: 
#               number: 80
